tests/outref/TSS03_errors.ref

-- All queries in this query file are invalid queries and generate an error.

-- TSS03 : OCTO192 : Using sub-query in a WHERE clause produces <Plan produced by optimizer appears incorrect> warning

-- Misc queries
SELECT * FROM names n1 WHERE n1.firstName = (SELECT n2.firstname FROM names n2 WHERE n2.firstname = n1.firstname);
SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));

-- Sub-query that returns 1 row, 1 column (i.e. a scalar) and type match. Use a sub-query wherever a scalar is possible
select id/(select 2 from names) from (select id from names) as n2;
select 2*(select id*id from names) from (select id from names) as n2;

-- Sub-query that returns 1 row, 1 column (i.e. a scalar) and type mismatch
SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);

-- Sub-query that returns 1 row but multiple columns
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);
SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);

-- Sub-query that returns > 1 rows but == 1 column
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName FROM names b WHERE (a.id % 2) = (b.id % 2));
SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName FROM names b WHERE (a.id % 2) = (b.id % 2));

-- Sub-query that returns > 1 rows and  > 1 columns
SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));
SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));

-- Sub-query that returns a NULL in == 1 row, > 1 columns
SELECT * FROM names a WHERE a.firstName = (SELECT NULL, NULL, firstname);
SELECT * FROM names a WHERE a.firstName != (SELECT NULL, NULL, firstname);

-- Sub-query that returns a NULL in  > 1 row, > 1 columns
SELECT * FROM names n1 WHERE n1.firstName = (SELECT NULL, n2.id, NULL from names n2);
SELECT * FROM names n1 WHERE n1.firstName != (SELECT NULL, n2.id, NULL from names n2);

-- Miscellaneous queries that issue error but used to assert fail due to an incorrect change to match_column_in_table.c
select id+2;

[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ERROR] PATH:LINENUM DATE TIME : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 30):

SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));
                             ^^^^^
Error with syntax near (line 1, column 47):

SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));
                                              ^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * from names n1 where n1.id IN (SELECT * FROM names n2 WHERE n2.id = ((n1.id + 1) % 6));
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ WARN] PATH:LINENUM DATE TIME : Ambiguous column name "ID": qualify name for safe execution
[ WARN] PATH:LINENUM DATE TIME : Ambiguous column name "ID": qualify name for safe execution
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ERROR] PATH:LINENUM DATE TIME : Type mismatch: left VARCHAR, right INTEGER
Error with syntax near (line 1, column 29):

SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
                            ^^^^^^^^^^^
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
                                                  ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names a WHERE a.firstName = (SELECT b.id FROM names b WHERE a.id = b.id);
[ERROR] PATH:LINENUM DATE TIME : Type mismatch: left VARCHAR, right INTEGER
Error with syntax near (line 1, column 29):

SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);
                            ^^^^^^^^^^^
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);
                                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT * FROM names a WHERE a.firstName != (SELECT b.id FROM names b WHERE a.id = b.id);
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);
                                                  ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE a.id = b.id);
                                                   ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ERROR] PATH:LINENUM DATE TIME : More than one row returned by a subquery used as an expression
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));
                                                  ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT b.firstName,b.lastname FROM names b WHERE (a.id % 2) = (b.id % 2));
                                                   ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 51):

SELECT * FROM names a WHERE a.firstName = (SELECT NULL, NULL, firstname);
                                                  ^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 52):

SELECT * FROM names a WHERE a.firstName != (SELECT NULL, NULL, firstname);
                                                   ^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 53):

SELECT * FROM names n1 WHERE n1.firstName = (SELECT NULL, n2.id, NULL from names n2);
                                                    ^^^^
[ERROR] PATH:LINENUM DATE TIME : Subquery must return only one column
Error with syntax near (line 1, column 54):

SELECT * FROM names n1 WHERE n1.firstName != (SELECT NULL, n2.id, NULL from names n2);
                                                     ^^^^
[ERROR] PATH:LINENUM DATE TIME : Unknown column: ID
Error with syntax near (line 1, column 8):

select id+2;
       ^^
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: select id+2;

